--- a/paper slide/probabilistic SGS/main.tex
+++ b/paper slide/probabilistic SGS/main.tex
@@ -16,7 +16,7 @@
     \title[Probabilistic SGS modeling]{A probabilistic approach to 
 		subgrid-scale modeling}
 \author[J. Zhao]{Jiaxi Zhao \\ \small joint with Q. Li\@ NUS, N. Thuerey\@ TUM}
-\date[\today]{NUS-SJTU PhD Forum \\ \today}
+\date[\today]{AI4X \\ \today}
 \begin{document}
 \par \setlength{\parindent}{2em}
 
